ops-spamdetector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spamdetector-modelapi-service

spec:
  selector:
    app: spamdetector-modelapi
  ports:
  - port: 8080
    targetPort: 5001
